--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -33,6 +33,12 @@
             text-decoration: underline;
           }
         }
+
+        &--active {
+          a {
+            text-decoration: underline;
+          }
+        }
       }
     }
   }
